fixed some ltr > rtl alignment for viz toggle

--- a/oec/assets/scss/elements/_visualize.scss
+++ b/oec/assets/scss/elements/_visualize.scss
@@ -175,13 +175,24 @@ body.visualize {
       @include left(250px);
 
       ~ .viz_menu {
-        background-position: left -10px top 128px,
-                             left -10px top 160px,
-                             left -10px top 192px,
-                             left -10px top 224px,
-                             left -10px top 256px,
-                             left -10px top 288px,
-                             left -10px top 320px;
+        @include ltr {
+          background-position: left -10px top 128px,
+                               left -10px top 160px,
+                               left -10px top 192px,
+                               left -10px top 224px,
+                               left -10px top 256px,
+                               left -10px top 288px,
+                               left -10px top 320px;
+        }
+        @include rtl {
+          background-position: right -10px top 128px,
+                               right -10px top 160px,
+                               right -10px top 192px,
+                               right -10px top 224px,
+                               right -10px top 256px,
+                               right -10px top 288px,
+                               right -10px top 320px;
+        }
       }
     }
 
@@ -200,13 +211,26 @@ body.visualize {
                           url('/static/img/icons/app/app_scatter.png');
         background-attachment: fixed;
         background-repeat: no-repeat;
-        background-position: left 8px top 128px,
-                             left 8px top 160px,
-                             left 8px top 192px,
-                             left 8px top 224px,
-                             left 8px top 256px,
-                             left 8px top 288px,
-                             left 8px top 320px;
+        
+        @include ltr {
+          background-position: left 8px top 128px,
+                               left 8px top 160px,
+                               left 8px top 192px,
+                               left 8px top 224px,
+                               left 8px top 256px,
+                               left 8px top 288px,
+                               left 8px top 320px;
+        }
+        @include rtl {
+          background-position: right 8px top 128px,
+                               right 8px top 160px,
+                               right 8px top 192px,
+                               right 8px top 224px,
+                               right 8px top 256px,
+                               right 8px top 288px,
+                               right 8px top 320px;
+        }
+
         background-size: 15px 15px;
         opacity: 1;
         width: 30px;
@@ -227,13 +251,21 @@ body.visualize {
 
     @media all and (max-width: 768px) {
       top: -25px;
-      left: 0px;
+      background-color: transparent !important;
+      @include left(0px);
 
       i {
         @include left(0 !important);
-        @include padding(0px, 15px, 17px, 0, !important);
-        @include transform(rotate(90deg));
-        background-color: transparent !important;
+        
+        @include ltr {
+          @include transform(rotate(90deg));
+          @include padding(0px, 15px, 17px, 0, !important);
+        }
+        @include rtl {
+          @include transform(rotate(270deg) scaleX(-1));
+          @include padding(0px, 0px, 17px, 15px, !important);
+
+        }
       }
 
       .viz_menu {
